Acomodando redacción v4 | MS II

--- a/4º Año/Metodologia de Sistemas II/Unidad 2/1. Los Requerimientos.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 2/1. Los Requerimientos.md
@@ -3,7 +3,7 @@
 Los requerimientos especifican qué es lo que el sistema debe hacer, es decir, sus funciones, sus propiedades esenciales y deseables. Un requerimiento expresa el propósito del sistema sin considerar como se va a implantar.
 
 >[!tldr] El Análisis de Requerimientos
->Nos referimos al análisis de requerimientos al conjunto de técnicas y procedimientos que nos permiten conocer los elementos necesarios para definir un proyecto de software. El análisis de requerimientos proporciona una vía para que los clientes y los desarrolladores lleguen a un acuerdo sobre lo que debe hacer el sistema. La especificación, producto de este análisis proporciona las pautas a seguir a los diseñadores del sistema.
+>Nos referimos al análisis de requerimientos como un conjunto de técnicas y procedimientos que nos permiten conocer los elementos necesarios para definir un proyecto de software. El análisis de requerimientos proporciona una vía para que los clientes y los desarrolladores lleguen a un acuerdo sobre lo que debe hacer el sistema. La especificación, producto de este análisis proporciona las pautas a seguir a los diseñadores del sistema.
 
 ## Aspectos de un Requerimiento
 
