--- a/4º Año/Metodologia de Sistemas II/Unidad 3/2. Tipos de Diagramas UML.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/2. Tipos de Diagramas UML.md
@@ -2,11 +2,11 @@ Como ya henos mencionado los diagramas se utilizan para visualizar un sistema de
 ## Vista de Usuario
 ### Diagrama de Casos de Uso
 
-Los ***casos de uso*** son una técnica utilizada para capturar información de cómo un sistema o negocio trabaja, o de cómo se desea que trabaje. Ayuda a obtener requerimientos desde el punto de vista del Usuario, los cuales son considerados actores, modelando la funcionalidad del sistema. 
-No pertenece estrictamente al enfoque orientado a objeto, sino que se utiliza como herramienta que ayuda al analista a comprender la forma en que un sistema deberá comportarse. 
+Los ***casos de uso*** son una técnica utilizada para capturar información de cómo un sistema o negocio trabaja, o de cómo se desea que trabaje. Ayuda a obtener requerimientos desde el punto de vista del usuario. 
+No pertenece estrictamente al enfoque orientado a objeto, sino que se utiliza como herramienta que ayuda al analista a comprender la forma en que un sistema deberá comportarse.
 Los casos de usos constan de los siguientes elementos:
 
-- **Actor:** Representa el rol que juega un usuario con respecto al sistema. Un actor no necesariamente representa a una persona en particular, sino más bien la labor que realiza frente al sistema, es decir, un actor es toda aquella entidad que interactúa con el sistema. La forma de representarlos es mediante un monigote de palos.
+- **Actor:** Representa el rol que juega un usuario con respecto al sistema. Un actor no necesariamente representa a una persona en particular, sino más bien la labor que realiza cualquier entidad frente al sistema. La forma de representarlos es mediante un monigote de palos.
 - **Caso de Uso:** Operación o tarea específica que se realiza tras la orden de algún agente externo. Los casos de usos se representan mediante óvalos que contiene el nombre del caso de uso.
 
 Los casos de usos y los actores interactúan entre sí a través de relaciones, los casos de uso definen cuatro tipos de relaciones:
@@ -29,7 +29,7 @@ Todos los casos de usos quedan documentados formalmente a través de su ***espec
 ## Vista de Comportamiento
 ### Diagrama de Actividad
 
-Es un tipo de diagrama de flujo que describe el orden de las actividades de un proceso. Describen las actividades que ocurren dentro de un Caso de Uso. Ha sido diseñado para mostrar una visión dinámica simplificada de lo que ocurre dentro de un proceso u operación. Los diagramas de actividad constan con los siguientes elementos:
+Este diagrama describe el orden de las actividades de un proceso. Suelen ser utilizados para describir las actividades que ocurren dentro de un caso de uso. Ha sido diseñado para mostrar una visión dinámica simplificada de lo que ocurre dentro de un proceso u operación.
 
 ![[elementos_diagrama_actividades.png]]
 
@@ -47,12 +47,12 @@ Es un tipo de diagrama de flujo que describe el orden de las actividades de un p
 >[!caution] Consideraciones a Tener en Cuenta
 >- Las actividades se reparten entre los diferentes actores que interactúen en ese caso, estos actores se colocan de forma horizontal en la parte superior del diagrama y se coloca una línea vertical para delimitar las actividades realizadas por cada actor.
 >- Todo el diagrama fluye de forma descendente.
->- Las salidas de una bifurcación condicional siempre deben ir hacia una actividad, no se puede ir de un condicional a otro.
->- En los condicionales la secuencia del "Si" siempre se coloca hacia abajo y el "No" va a depender, en caso de que se necesite retornar a actividades anteriores el "*No*" sale por la izquierda del rombo, pero en el caso de que dicha secuencia tenga un desarrollo más elaborado que involucre una serie de actividades, entonces el flujo saldrá por la derecha.
+>- Las subdivisiones siempre deben ir hacia una actividad, no se puede ir de forma directa de una subdivisión a otro.
+>- En las subdivisiones, la secuencia del "Si" siempre se coloca hacia abajo y el "No" va a depender, en caso de que se necesite retornar a actividades anteriores el "*No*" sale por la izquierda del rombo, pero en el caso de que dicha secuencia tenga un desarrollo más elaborado que involucre una serie de actividades, entonces el flujo saldrá por la derecha.
 >- Una subdivisión no puede ir directamente a una bifurcación, siempre debe haber una actividad de por medio que lleve a la bifurcación.
 ### Diagrama de Secuencias
 
-Es un diagrama de interacción que muestra como se comunican los distintos objetos que forman parte del sistema entre sí durante el transcurso del tiempo.
+Es un diagrama de interacción que muestra como se comunican los distintos objetos que forman parte del sistema durante el transcurso del tiempo.
 
 ![[elementos_secuencias.png]]
 
@@ -64,7 +64,7 @@ Es un diagrama de interacción que muestra como se comunican los distintos objet
 Por su parte, la dimensión horizontal muestra la disposición de los objetos y la dimensión vertical muestra el paso del tiempo. 
 ### Diagrama de Colaboración
 
-Este diagrama es similar al Diagrama de Secuencia, pero muestra la forma en cómo los objetos colaboran entre sí, resaltando la organización de los objetos que participan en una interacción y sus relaciones. Cuenta con dos características que lo diferencia del Diagrama de Secuencia:
+Este diagrama es similar al diagrama de secuencia, pero muestra la forma en cómo los objetos colaboran entre sí, resaltando la organización de los objetos que participan en una interacción y sus relaciones. Cuenta con dos características que lo diferencia del Diagrama de Secuencia:
 - **Camino:** Indica como están enlazados los distintos objetos. 
 - **Número de Secuencia**: Indica el orden temporal de los mensajes, se precede de un número y que incrementa secuencialmente por cada nuevo mensaje en el flujo de control. También se cuenta la representación por anidamiento, utilizando la numeración decimal de Dewey.
 
@@ -75,8 +75,7 @@ Este diagrama es similar al Diagrama de Secuencia, pero muestra la forma en cóm
 >
 ### Diagrama de Estado
 
-Muestra el conjunto de estados por los cuales pasa un objeto durante su tiempo de vida en una aplicación. Representa los estados en los que puede encontrarse un objeto, junto con las transiciones entre estos estados, y muestro los puntos inicial y final de una secuencia de cambios de estados.
-Es usado para mostrar la vida de un objeto determinado a través de todo el sistema, los eventos causan una transición de un estado a otro, y las acciones que resultan del cambio de estado. Los Elementos de un Estado son: 
+Muestra el conjunto de estados por los cuales pasa un objeto durante su tiempo de vida y las transiciones que existen entre los distintos estados. Es usado para mostrar la vida de un objeto determinado a través de todo el sistema, los eventos causan una transición de un estado a otro, y las acciones que resultan del cambio de estado. Los Elementos de un Estado son: 
 - **Estado:** Es una condición o situación en la vida de un objeto durante la cual se satisface alguna condición, realiza alguna actividad o espera algún evento. 
 - **Evento:** Es la especificación de un acontecimiento significativo que ocupa un lugar en el espacio y en el tiempo. 
 - **Transición:** Es la relación entre dos estados, en la que se indica cómo se pasa de uno a otro.
