--- a/4º Año/Metodologia de Sistemas II/Unidad 4/1. Diseño Arquitectonico.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 4/1. Diseño Arquitectonico.md
@@ -1,6 +1,6 @@
 El diseño arquitectónico se interesa en comprender la organización óptima de un sistema y la estructuración global de este mismo, teniendo en cuenta la interacción entre los distintos componentes que lo integran. Esta fase constituye la etapa inicial en el proceso de diseño de software, resultando en la creación de un modelo arquitectónico. Dicho modelo detalla cómo se estructura el sistema en términos de sus componentes y la comunicación existente entre estos mismos. Un modelo arquitectónico puede emplearse de dos maneras distintas en la programación:
 
-1. **Como una forma de facilitar la discusión acerca del diseño del sistema**. Una visión arquitectónica de alto nivel de un sistema es útil para la comunicación con los participantes de un sistema y la planeación del proyecto, ya que no se satura con detalles. El modelo arquitectónico identifica los componentes claves que se desarrollarán, de modo que los administradores pueden asignar a individuos para planear el desarrollo de dichos sistemas.
+1. **Como una forma de facilitar la discusión acerca del diseño del sistema**. Una visión arquitectónica de alto nivel de un sistema es útil para la comunicación con los participantes de un sistema y la planeación del proyecto.
 2. **Como una forma de documentar una arquitectura que se haya diseñado**. La meta aquí es producir un modelo de sistema completo que muestre los diferentes componentes en un sistema, sus interfaces y conexiones. El argumento para esto es que tal descripción arquitectónica detallada facilita la comprensión y la evolución del sistema.
 
 >[!tldr] Pasos en el Diseño Arquitectónico
