--- a/4º Año/Metodologia de Sistemas II/Unidad 1/1. Procesos de Software.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 1/1. Procesos de Software.md
@@ -12,7 +12,7 @@ La definición de lo que es un proceso en el campo de la ingeniería de software
 - **Validación del software**: Hay que validar el software para asegurarse de que cumple lo que el cliente quiere.
 - **Evolución del software**: El software tiene que evolucionar para satisfacer las necesidades cambiantes del cliente.
 
-Un buen proceso de software debe especificar ***la secuencia de actividades a realizar*** por el equipo de desarrollo, es decir, su flujo de actividades. ***Los productos*** que deben crearse, ya sea resultado de una actividad de desarrollo o del diseño de una arquitectura específica. ***La asignación de tareas*** a los miembros del equipo, como así también roles y responsabilidad dentro del grupo de trabajo. Y por último ***los criterios para controlar el proceso***, estableciendo hitos (Acontecimientos puntuales y significativos) y una serie de controles que ayuden a realizar la gestión de los proyectos de software. Los procesos de software son muy importantes, ya que nos ayuda a:
+Un buen proceso de software debe especificar ***la secuencia de actividades a realizar*** por el equipo de desarrollo, es decir, su flujo de actividades. ***Los productos*** que deben crearse al culminar cada actividad, ya sean diseños, componentes o prototipos. ***La asignación de tareas*** a los miembros del equipo, como así también roles y responsabilidad dentro del grupo de trabajo. Y por último ***los criterios para controlar el proceso***, estableciendo hitos (Acontecimientos puntuales y significativos) y una serie de controles que ayuden a realizar la gestión de los proyectos de software. Los procesos de software son muy importantes, ya que nos ayuda a:
 
 - Facilita la gestión del proyecto.
 - Establece una división del trabajo.
@@ -24,5 +24,5 @@ Un buen proceso de software debe especificar ***la secuencia de actividades a re
 - Asegura la calidad.
 
 Cuando un proceso en particular se implica a la construcción de algún producto, nos solemos referir a este proceso como [[1. Modelos de Ciclo de Vida|Ciclo de Vida]]. Los proyectos de software se desarrollan en una serie de ***fases***, que van desde la *concepción del software* y su desarrollo inicial hasta su *puesta en funcionamiento* y posterior retirada por otra nueva generación de software.
-En este contexto, un ***modelo de proceso software*** es una representación abstracta y simplificada de un proceso de software, los cuales ofrecen un marco de definición para el proceso, pero no detallan las actividades específicas. Estos modelos no son descripciones definitivas de un proceso de software, más bien una abstracción útil que puede servir a la hora de desarrollar software.
+En este contexto, un ***modelo de proceso software*** es una representación abstracta y simplificada de un proceso de software, los cuales ofrecen un marco de definición para el proceso, pero no detallan las actividades específicas que tendrá el proceso. Estos modelos no son descripciones definitivas de un proceso de software, más bien una abstracción útil que puede servir a la hora de desarrollar software.
 A lo largo de los años surgieron diversos [[2. Tipos de Modelos de Ciclo de Vida|Modelos de Ciclo de Vida]], los cuales plantean diferentes enfoques a la hora de desarrollar software y de llevar adelante el desarrollo de un programa.
