--- a/4º Año/Metodologia de Sistemas II/Unidad 3/1. Modelado de Software y UML.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/1. Modelado de Software y UML.md
@@ -1,4 +1,4 @@
-Las personas construyen modelos para ayudar al usuario a visualizar el producto final. Estos modelos son una simplificación de la realidad y proporciona los planos de un sistema, los cuales van escalando en complejidad mientras más complejo sea el proceso de construcción que se esté modelando, es decir, la complejidad depende directamente de la dificultad del proceso empleado para realizar dicho sistema.
+Las personas construyen modelos para ayudar al usuario a visualizar el producto final, estos modelos son una simplificación de la realidad y proporciona los planos de un sistema. La complejidad de estos mismos va escalando mientras más complejo sea el proceso de construcción que se esté modelando, es decir, la complejidad depende directamente de la dificultad del proceso empleado para realizar dicho sistema.
 Los modelos se construyen para comprender mejor el sistema que se está desarrollando. A través de estos modelos se consigue:
 
 1. Visualizar como es o queremos que sea un sistema. 
@@ -15,12 +15,12 @@ Cuando más grande y complejo es el sistema, el modelado se hace más importante
 
 ### Lenguaje Unificado de Modelado (UML)
 
-El que es UML, para qué sirve, sus características y distintos diagramas, están explicados más a detalle en la [[1. Lenguaje Unificado de Modelado - UML|Unidad 7]] de metodología de sistemas I. Lo importante a saber es que UML no es una metodología, más bien es un metalenguaje independiente de la metodología empleada y del lenguaje de programación en el que se realice la implementación.
+Todos los detalles más específicos de UML están explicados más a detalle en la [[1. Lenguaje Unificado de Modelado - UML|Unidad 7]] de metodología de sistemas I. Lo importante a recordar es que UML no es una metodología, más bien es un metamodelo que permite construir y definir otros modelos, por eso se dice que es independiente de la metodología y del lenguaje de programación utilizados para llevar adelante el proyecto.
 El modelo UML consta de 5 tipos de vistas y 9 tipos de diagramas, estos diagramas expresan gráficamente partes de un modelo.
 
 ![[diagramas_uml.png]]
 
-La finalidad de los diagramas es presentar diversas perspectivas de un mismo sistema. Es importante destacar que el Modelo UML describe lo que supuestamente hará un sistema, pero no dice como implementar esté mismo.
+La finalidad de los diagramas es presentar diversas perspectivas de un mismo sistema. Es importante destacar que el Modelo UML describe lo que presuntamente hará un sistema, pero no dice como implementar esté mismo.
 La razón por la que existen tantos diagramas UML es porque le permite a las partes involucradas examinar un sistema desde distintos puntos de vista, esto es de suma importancia porque el proceso de construcción del sistema involucra a diferentes personas, los cuales tienen enfoques particulares y diferentes puntos de vistas del sistema, en sí el objetivo es satisfacer a cada persona involucrada. Recordemos que nuestro proceso para desarrollar software consiste de los siguientes pasos.
 
 ![[proceso-desarrollo.png]]
