--- a/4º Año/Metodologia de Sistemas II/Unidad 3/4. Proceso Unificado de Racional (RUP).md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/4. Proceso Unificado de Racional (RUP).md
@@ -1,13 +1,13 @@
 Hoy en día, es prácticamente indispensable utilizar metodologías para el desarrollo de aplicaciones debido a la necesidad de controlar variables durante su elaboración. Seguir una metodología y estándares permite mantener la competitividad, facilitando el desarrollo de aplicaciones de manera eficiente, ordenada y con el mínimo número de defectos.
-En este contexto, ***RUP*** surge como una de las metodologías estándares más utilizadas para el análisis, implementación y documentación de sistemas orientados a objetos. RUP es un marco de proceso que proporciona un vocabulario y una estructura flexible para discutir y gestionar el desarrollo de software. Cuando se implementa RUP, el primer paso es seleccionar un ***caso de desarrollo*** para el proyecto, elegir un caso de desarrollo adecuado requiere la experiencia de alguien profundamente familiarizado con RUP, capaz de adaptar el marco a las necesidades particulares del proyecto, ya que cada proyecto es diferente y posee características particulares.
-El principal objetivo de esta metodología es asegurar la producción del software de alta calidad que resuelve las necesidades de los usuarios dentro de un presupuesto y tiempo establecidos.
+En este contexto, ***RUP*** surge como una de las metodologías estándares más utilizadas para el análisis, implementación y documentación de sistemas orientados a objetos. RUP es un marco de proceso que proporciona un vocabulario y una estructura flexible para discutir y gestionar el desarrollo de software. Cuando se implementa RUP, el primer paso es seleccionar un ***caso de desarrollo*** para el proyecto, elegir un caso de desarrollo adecuado requiere la experiencia de alguien profundamente familiarizado con RUP, capaz de adaptar el marco a las necesidades particulares del proyecto.
+El principal objetivo de esta metodología es asegurar la producción del software de alta calidad que resuelva las necesidades de los usuarios dentro de un presupuesto y tiempo establecidos.
 ### Dimensiones del Modelo
 
-El RUP tiene dos dimensiones, el eje horizontal representa tiempo y demuestra los aspectos del ciclo de vida del proceso, esta dimensión es dinámica. Mientras que el eje vertical representa las disciplinas, que agrupan actividades definidas lógicamente por la naturaleza, esta dimensión es estática, ya que las disciplinas siempre serán las mismas.
+RUP posee dos dimensiones. La primera de ellas situada en el eje horizontal representa tiempo y demuestra los aspectos del ciclo de vida del proceso, esta dimensión es dinámica. Mientras que la segunda se sitúa en el eje vertical representando las distintas disciplinas, que agrupan actividades definidas lógicamente por la naturaleza, esta dimensión es estática.
 
 ![[dimensiones_RUP.png]]
 
-Como se puede observar en la imagen, el énfasis de cada disciplina varia de acuerdo a los plazo de tiempo y de la fases de desarrollo en la que se encuentre.
+Como se puede observar en la imagen, el énfasis de cada disciplina varia de acuerdo a los plazo de tiempo y la fases de desarrollo en la que se encuentre.
 RUP proporciona una serie de disciplinas que guían el proceso de documentación e implementación, asimismo cuenta con guías para un buen desarrollo, todo ellas dentro de las respectivas fases con las cuales cuenta.
 
 | Flujos de Trabajo                      | Tareas a Realizar                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
@@ -29,11 +29,11 @@ En cuanto a la perspectiva práctica, se recomiendan seis buenas prácticas acon
 1. **Desarrollar el software de forma iterativa**: Planifica incrementos del sistema basándose en las prioridades del usuario y desarrollo. Entregar las características del sistema que tengan la más alta prioridad al inicio del proceso de desarrollo. 
 2. **Gestionar los requerimientos**: Documenta explícitamente los requerimientos del cliente y se mantiene al tanto de los cambios en estos requerimientos. Analizar el impacto de los cambios en el sistema antes de aceptarlos.
 3. **Utilizar arquitecturas basadas en componentes**: Estructura la arquitectura del sistema en componentes reutilizables en la mayor medida posible.
-4. **Modelar el software de forma gráfica**: Utiliza modelos gráficos UML para presentar vistas estáticas y dinámicas del software. 
+4. **Modelar el software de forma gráfica**: Utiliza modelos gráficos UML para presentar vistas estáticas y dinámicas del software.
 5. **Verificar la calidad del software**: Asegura que el software cumple con los estándares de calidad de la organización.
-6. **Controlar los cambios del software**: Gestiona los cambios del software usando un sistema de gestión de cambios y procedimientos, también herramientas de gestión de configuraciones. 
+6. **Controlar los cambios del software**: Gestiona los cambios del software usando un sistema de gestión de cambios y procedimientos, también herramientas de gestión de configuraciones.
 
-El RUP presenta 3 características esenciales de todo el proceso de desarrollo:
+RUP como metodología presenta tres características esenciales:
 
 1. **Dirigido por los casos de uso**: Los casos de uso es una técnica que se utiliza para la captura de requisitos por parte de los clientes/usuarios, se define un caso de uso como un fragmento de funcionalidad del sistema que proporciona al usuario un valor añadido. Estos casos de usos abarcan desde la fase de requerimientos hasta la fase de pruebas.
 2. **Centrado en la arquitectura**: La arquitectura involucra los aspectos estáticos y dinámicos más significativos del sistema, está muy relacionada con la toma de decisiones de cómo debe ser desarrollado el sistema. La arquitectura se ve influenciada por la plataforma de software, sistema operativo, gestor de bases de datos, protocolos, consideraciones de desarrollo como sistemas heredados. Muchas de estas restricciones constituyen requisitos no funcionales del sistema. 
