--- a/4º Año/Comunicaciones y Redes/Unidad 2/1. Capa de Aplicacion.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/1. Capa de Aplicacion.md
@@ -100,7 +100,7 @@ Existen protocolos especiales de acceso al correo para transferencia de mensajes
 - **POP3 (Post Office Protocol v3)**: El funcionamiento de este protocolo consta de los siguientes pasos
 	1. Un agente de usuario abre conexión TCP con el servidor de correo puerto 110.
 	2. El agente de usuario envía nombre de usuario y contraseña para realizar una autenticación (Fase de Autenticación).
-	3. Se descargan los correo de forma local, los agentes de POP3 suelen ser configurados para descargar y borrar los correos de la bandeja de entrada o descargar y guardar (Fase de Transacción).
+	3. Se descargan los correos de forma local, los agentes de POP3 suelen ser configurados para descargar y borrar los correos de la bandeja de entrada o descargar y guardar (Fase de Transacción).
 	4. El cliente termina la operación y el servidor se actualiza (Fase de Actualización).
 - **IMAP (Internet Mail Access Protocol)**: Posee más funcionalidades que ***POP3***, pero es mucho más complejo, la principal diferencia es que IMAP permite que el agente de usuario acceda al buzón de correos, que se encuentra en el servidor de correos, como si fuera local, desde distintas localizaciones, sin necesidad de tener que mover los mensajes de un equipo a otro. Además de permitir al agente de usuario obtener partes específicas del mensaje, tales como encabezado, crear distintas carpetas, mover correos a otras carpetas y realizar búsquedas de forma remota. Este protocolo utiliza el puerto 143 para realizar su comunicación.
 - **HTTP**: Envío y recepción de mensajes a través de HTTP, esto permite utilizar a los navegadores web como agentes de usuario. Aunque varíe la forma de realizar los envíos, en el fondo todos cuando se envía un correo primero va a ir al servidor de correos del emisor y desde allí ser enviado al buzón de correo del servidor de destino.
