Se agrego contexto a la palabra

--- a/4º Año/Comunicaciones y Redes/Unidad 2/2. Servicio de Nombre de Dominio (DNS).md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/2. Servicio de Nombre de Dominio (DNS).md
@@ -15,7 +15,7 @@ Los DNS son una gran base de datos distribuida que se organiza de forma jerárqu
 4. **Mantenimiento**. Ese único servidor DNS tendría que mantener registros de todos los hosts de Internet, teniendo que ser actualizada con frecuencia con el fin de incluir todos los hosts nuevos.
 
 Al mismo tiempo, DNS se comporta como un protocolo de *capa de aplicación* que le permite a los hosts acceder a esta base de datos. Como protocolo, DNS utiliza una conexión UDP a través del puerto 53.
-La forma en la que este sistema pueden resolver los direccionamientos desde el cliente hacia su correspondiente servidor es mediante una organización jerárquica de los nombres de las URL, a nivel lógico, estos sistemas usan una estructura arbórea, similar a la de los sistemas de archivos de los sistemas operativos, para organizar todos los nombres de dominios, véase la siguiente imagen.
+La forma en la que este sistema pueden resolver los direccionamientos desde el cliente hacia su correspondiente servidor es mediante una organización jerárquica de los nombres de las URL, a nivel lógico, estos sistemas usan una estructura arbórea (Semejante al árbol), similar a la de los sistemas de archivos de los sistemas operativos, para organizar todos los nombres de dominios, véase la siguiente imagen.
 
 ![[organizacion-dns.png]]
 
