--- a/4º Año/Comunicaciones y Redes/Unidad 3/2. Protocolos de Transporte.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 3/2. Protocolos de Transporte.md
@@ -6,7 +6,7 @@ Un protocolo de la capa de transporte proporciona comunicación lógica entre lo
 Entre los distintos servicios que nos brindan los protocolos de transporte se encuentran los siguientes:
 
 1. Convertir el servicio de entrega de IP entre dos hosts, a un servicio de entrega entre procesos. Es decir, multiplexar y desmultiplexar los datos.
-2. Comprobación de la integridad de los paquetes (cheksum en headers).
+2. Comprobación de la integridad de los paquetes (checksum en headers).
 3. Realizar un direccionamiento usando ***sockets***.
 
 >[!tldr] Los Sockets
