--- a/4º Año/Comunicaciones y Redes/Unidad 4/1. Capa de Red.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 4/1. Capa de Red.md
@@ -3,7 +3,7 @@ La función de la capa de red es simple, es la encargada de transportar paquetes
 1. **Reenvío (forwarding)**: Cuando un paquete llega al enlace de entrada de un router, éste tiene que pasar el paquete al enlace de salida apropiado. Por ejemplo, un paquete que llega procedente de $H_1$ al router $R_1$ debe ser reenviado al siguiente router de la ruta hacia $H_2$, es decir, hacia su destino.
 2. **Enrutamiento (routing)**: La capa de red tiene que determinar la ruta o camino que deben seguir los distintos paquetes a medida que fluyen desde emisor al receptor. Los algoritmos que calculan estas rutas se conocen como ***algoritmos de enrutamiento***.
 
-Todo router tiene una tabla de reenvío. Un router reenvía un paquete examinando el valor de un campo de la cabecera del paquete entrante y utilizando después ese valor para indexarlo dentro de la tabla de reenvío del router. El resultado de la tabla de reenvío indica a cuál de las interfaces del enlace de salida del router será reenviado el paquete. En ocasiones se emplea el término de ***conmutador de paquetes*** para referirnos a un dispositivo de conmutación de paquetes general que transfiere un paquete desde la interfaz del enlace de entrada a la interfaz del enlace de salida, de acuerdo con el valor almacenado en un campo de la cabecera del paquete, aunque algunos conmutadores basan su decisión de acurdo al campo de la cabecera de la capa de enlace, mientras que otros lo basan en el campo de la cabecera de la capa de red.
+Todo router tiene una tabla de reenvío. Un router reenvía un paquete examinando el valor de un campo de la cabecera del paquete entrante y utilizando después ese valor para indexarlo dentro de la tabla de reenvío del router. El resultado de la tabla de reenvío indica a cuál de las interfaces del enlace de salida del router será reenviado el paquete. En ocasiones se emplea el término de ***conmutador de paquetes*** para referirnos a un dispositivo de conmutación de paquetes general que transfiere un paquete desde la interfaz del enlace de entrada a la interfaz del enlace de salida, de acuerdo con el valor almacenado en un campo de la cabecera del paquete, aunque algunos conmutadores basan su decisión de acuerdo al campo de la cabecera de la capa de enlace, mientras que otros lo basan en el campo de la cabecera de la capa de red.
 Por otro lado, el **modelo de servicio de red** define las características del transporte punto a punto de los paquetes entre los sistemas terminales emisor y receptor. La capa de red de Internet proporciona un único servicio conocido como ***servicio de mejor esfuerzo*** en la cual la temporización relativa entre paquetes no está garantizada, tampoco está garantizado que los paquetes se reciban en el orden que fueron emitidos y tampoco garantiza la entrega de los paquetes al destino.
 Al igual que la capa de transporte, la capa de red en los sistemas de conmutación de paquetes proporciona dos tipos de servicios de conexión, un servicio sin conexión y otro con conexión. Las redes de computadoras que sólo proporcionan un servicio de conexión en la capa de red se conocen como ***redes de circuitos virtuales***. Mientras que las redes que sólo proporcionan un servicio sin conexión en la capa de red se denominan ***redes de datagramas***.
 
