--- a/4º Año/Comunicaciones y Redes/Unidad 3/2. Protocolos de Transporte.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 3/2. Protocolos de Transporte.md
@@ -62,7 +62,7 @@ Este protocolo permite que los datos se transfieran muy rápido, pero también p
 
 - Protocolo de transporte sin conexión.
 - Transferencia de datos no fiable.
-- Toma los mensajes de la aplicación, añade los campos con los números del puerto de origen y de destino, y dos campos más correspondientes al control de errores y pasa el segmento a la capa de red. Es decir, la aplicación está interactuando casi directamente con la capa IP.
+- Toma los mensajes de la aplicación, añade los campos con los números del puerto de origen y de destino, y dos campos más correspondientes al control de errores y pasa el segmento a la capa de red. Es decir, la aplicación está interactuando casi directamente con la capa red.
 - Función de multiplexado y desmultiplexado.
 - Mínimo chequeo de errores.
 - No tiene control de congestión.
