Procesamientos de consultas termiado | DB

--- a/4º Año/Bases de Datos/Unidad 8/4. Procesamiento de Consultas SQL.md
+++ b/4º Año/Bases de Datos/Unidad 8/4. Procesamiento de Consultas SQL.md
@@ -12,8 +12,22 @@ Para especificar completamente cómo evaluar una consulta, no basta con proporci
 Las operaciones del álgebra relacional anotadas con instrucciones sobre su evaluación reciben el nombre de ***primitivas de evaluación***. El ***motor de ejecución de consultas*** utilizan secuencias de operaciones primitivas para escoger y establecer un ***plan de ejecución de la consulta*** o ***plan de evaluación de la consulta***, para posteriormente ejecutarlo y devolver su respuesta a la consulta.
 Los diferentes planes de evaluación de una misma consulta dada pueden tener costes distintos. No se puede esperar que los usuarios escriban las consultas de manera que sugieran el plan de evaluación más eficiente. En su lugar, es responsabilidad del sistema construir un plan de evaluación que minimice el coste de la evaluación de la consulta; esta tarea se denomina ***optimización de consultas***.
 
-## Medidas del Coste de una Consulta
+## Optimización de Consultas
 
+La optimización de consultas es el proceso de selección del plan de evaluación de las consultas más eficiente de entre las muchas estrategias generalmente disponibles para el procesamiento de una consulta dada, especialmente si la consulta es compleja. Ya que no se espera que los usuarios escriban consultas de forma eficiente, por lo que es trabajo del gestión de la base de datos elegir plan de evaluación menos costoso.
+Un aspecto de la optimización de las consultas tiene lugar en el nivel del álgebra relacional, donde el sistema intenta hallar una expresión que sea equivalente a la expresión dada, pero cuya ejecución sea más eficiente. Otro aspecto es la elección de la estrategia para el procesamiento de la consulta, como puede ser la selección del algoritmo que se usará para ejecutar una operación, la selección de los índices concretos a emplear, entre otras.
+
+>[!tldr] Importancia en la Elección de los Planes de Evaluación
+> La diferencia en coste entre una estrategia buena y una mala suele ser sustancial, y puede resultar de varios órdenes de magnitud. Por tanto, merece la pena que el sistema invierta una cantidad importante de tiempo en la selección de una buena estrategia para el procesamiento de la consulta.
+
+Para hallar el plan de evaluación de consultas menos costoso el optimizador necesita generar planes alternativos que produzcan el mismo resultado que la expresión dada y escoger el de menor coste. La generación de planes de evaluación de consultas implica tres etapas:
+
+1. Generar expresiones que sean equivalentes lógicamente a la expresión dada.
+2. Estimar los costes de cada plan de evaluación.
+3. Anotar las expresiones alternativas resultantes para generar planes distintos de ejecución.
+
+La primera y tercera etapas se entrelazan al momento de la optimización de las consultas, ya que algunas expresiones se generan e inmediatamente son anotadas, por otro lado la segunda etapa se realiza más en segundo plano recopilando información estadística sobre las relaciones involucradas en la consulta.
+Para implementar la primera etapa el optimizador de consultas debe generar expresiones equivalentes a la expresión dada. Se dice que dos expresiones del álgebra relacional son equivalentes si, en cada ejemplar legal de la base de datos, las dos expresiones generan el mismo conjunto de tuplas, la manera de obtener expresiones equivalentes es mediante las ***reglas de equivalencia***, que especifican el modo de transformar una expresión en otra lógicamente equivalente[^1].
 Para optimizar una consulta apropiadamente, el optimizador debe conocer el coste de cada operación. Aunque el coste exacto es difícil de calcular, dado que depende de los siguientes parámetros:
 
 - **Costo de acceso al almacenamiento secundario**: Tiempo de acceso a los registros de un archivo, este tiempo va a depender en parte del tipo de estructuras de acceso a dicho fichero.
@@ -22,8 +36,7 @@ Para optimizar una consulta apropiadamente, el optimizador debe conocer el coste
 - **Costo de uso de memoria**: Cantidad de memoria que se necesitan durante la ejecución de la consulta.
 - **Costo de comunicaciones**: Tiempo de envío de la consulta y de sus resultados desde el sitio donde se ubica la base de datos hasta el terminal donde se originó la consulta.
 
-En base a esto parámetros es posible obtener una estimación aproximada del coste de ejecución para cada operación. En grandes sistemas de bases de datos, el coste de acceso a los datos en disco es normalmente el más importante, ya que los accesos a disco son más lentos comparados con las operaciones en memoria.
-Para realizar diferentes estrategias de ejecución de consultas, es fundamental considerar la información necesaria en las funciones de costo. Esta información se almacena en el catálogo del sistema de gestión de bases de datos, y es accedida por el optimizador de consultas. El optimizador utiliza los siguientes datos para determinar la forma más eficiente de ejecutar una consulta:
+Por esta razón se opta por realizar estimaciones de costes en lugar de calcularlos de forma exacta. Las estimaciones se calculan a partir de información estadística la cual es almacenado en los catálogos de los sistema de gestión de bases de datos, los datos que estos catálogos contiene son los siguientes:
 
 1. **El número de registros (r)**: Representa la cantidad total de registros que hay en un fichero o tabla de la base de datos.
 2. **El tamaño medio de los registros (R)**: Indica el tamaño promedio de un registro. Este valor es importante para calcular el espacio que ocupan los datos en almacenamiento.
@@ -33,6 +46,12 @@ Para realizar diferentes estrategias de ejecución de consultas, es fundamental 
 6. **Número de niveles de cada índice multinivel (x)**: Indica la cantidad de niveles que existen en un índice multinivel.
 7. **Número de bloques de índices de primer nivel**: Representa la cantidad de bloques que conforman el primer nivel de un índice. Esto es importante para calcular el número de accesos a bloques necesarios durante una operación de búsqueda.
 
+>[!info] Actualización de los Datos Estadísticos
+>Muchos datos estadísticos como el tamaño de las relaciones o la profundidad de los indices multinivel son actualizados de manera constante, pero los gestores de bases de datos no actualizan esta información de forma inmediata ya que representa una sobrecarga sustancial para la base de datos, la mayoría de sistemas de gestión de bases de datos realizan esta actualización en momentos donde la carga del sistema es baja.
+>Esto no supone un cambio tan radical en las estimaciones realizadas para cada plan de evaluación de consultas, siempre y cuando el tamaño de las actualizaciones realizadas no posea un tamaño considerable.
+
+Además de estos datos, la mayoría de las bases de datos almacenan la distribución de los valores de cada atributo en forma de histograma, ya que estos son fáciles de almacenar y utilizan poco espacio en sus catálogos. Los gestores de bases de datos utilizan varios tipos de histogramas, como lo podrían ser los *histograma de equianchura* y los *histograma de equiprofundidad*[^2].
+
 >[!tldr] Selectividad
 >La selectividad es un concepto crucial en el procesamiento de consultas porque ayuda a determinar cuántos registros cumplirán con una condición específica. 
 >En este contexto el ***número de valores distintos (d)*** es la cantidad de valores únicos que puede tener un atributo en una tabla de la base de datos. Por ejemplo, si una columna tiene el atributo "ciudad" y en la base de datos hay 10 ciudades diferentes, entonces d=10. Mientras que la ***selectividad*** es la proporción de registros que cumplen una condición de igualdad sobre un atributo. Es una medida de cómo se distribuyen los valores en una columna en relación con una condición específica. Por otro lado, la ***cardinalidad de selección (s)*** de un atributo es el número medio de registros que cumplirán una condición de igualdad sobre ese atributo y se calcula de la siguiente manera:
@@ -41,3 +60,23 @@ Para realizar diferentes estrategias de ejecución de consultas, es fundamental 
 >- Si el atributo es una clave, es decir, cada valor es único, entonces $d = r$ y $sl = 1/r$, por lo tanto $s = 1$.
 >- Si el atributo no es clave y los $d$ valores están distribuidos uniformemente $sl = 1 / d$ y por lo tanto $s = r/d$.
 
+### Elección de los Planes de Evaluación
+
+La generación de expresiones sólo es una parte del proceso de optimización de consultas, ya que cada operación de la expresión puede implementarse con algoritmos diferentes. Por tanto, se necesita un plan de evaluación para definir exactamente el algoritmo que se usará para cada operación y el modo en que se coordinará la ejecución de las operaciones.
+Cada una de las operaciones relacionales se pueden implementar en varios algoritmos diferentes, lo que da lugar a planes de evaluación alternativos, sumado a que adicionalmente hay que tomar decisiones sobre el ***encauzamiento***, es decir, sobre el orden en el que estas operaciones relacionales deben ser realizadas.
+Una manera de escoger un plan de evaluación para una expresión de consulta es sencillamente escoger el algoritmo más económico para evaluar cada operación. Sin embargo, puede que el algoritmo más económico no siempre sea la forma más optima de resolver una expresión, debido a que otros algoritmos pueden proporcionarnos ciertas ventajas en situaciones específicas, por lo que al momento de seleccionar un plan de evaluación no solo se debe considerar la expresión de menor costo sino también los algoritmos de resolución de cada operación relacional.
+Hay dos enfoques generales a la hora de seleccionar el algoritmo de evaluación adecuado. El primero busca todos los planes y escoge el mejor de una manera basada en los costes, mientras que el segundo usa la heurística para escoger el plan. Cabe aclarar que los optimizadores de consultas reales incorporan elementos de ambos enfoques.
+
+- **Operación basada en costes**. Los optimizadores basados generan una gama de planes de evaluación a partir de la consulta dada empleando las reglas de equivalencia y escogen el de coste mínimo. Para las consultas complejas el número de planes de consulta diferentes que son equivalentes a un plan dado puede ser grande. Para evitar esto se puede desarrollar un algoritmo de ***programación dinámica*** para hallar los órdenes de las operaciones, almacenado los resultados obtenidos y volviéndolos a utilizar, reduciendo enormemente el tiempo de ejecución[^3].
+
+>[!tldr] Orden de Reunión de las Relaciones
+>El orden en que la reunión de un conjunto de relaciones genera las tuplas también es importante para hallar el mejor orden global de reunión, ya que puede afectar al coste de las reuniones posteriores. Se dice que un ***orden determinado*** de las tuplas es un orden interesante si puede resultar útil para alguna operación posterior.
+
+- **Heurística de optimización**. Un inconveniente de la optimización basada en costes es el coste de la propia optimización. Este coste puede reducirse mediante algoritmos inteligentes, aun así el número de planes de evaluación distintos para una consulta puede ser muy grande y buscar el plan óptimo sigue teniendo un coste muy alto. Por ello, muchos sistemas usan reglas heurística para reducir el coste de la optimización. Un ejemplo de regla heurística puede ser resolver las operaciones de selección tan pronto como sea posible. Los optimizadores heurísticos usan esta regla sin averiguar si se reduce el coste mediante esta transformación, por lo general la aplicación de estas reglas suele aportar una reducción al coste, aunque no siempre.
+
+>[!info] Heurística para la Proyección
+>La operación proyección, como la operación selección, reduce el tamaño de las relaciones. Por tanto, siempre que haya que generar una relación temporal, resulta ventajoso aplicar inmediatamente cuantas proyecciones sea posible. Aunque suele resultar mejor llevar a cabo las selecciones antes que las proyecciones, ya que las selecciones tienen la posibilidad de reducir mucho el tamaño de las relaciones y permiten el empleo de índices para tener acceso a las tuplas.
+
+[^1]: Para saber cuales son las reglas de equivalencia y sus propiedades ver página 477 del Silberschatz.
+[^2]: Para saber como se calculan las estimaciones de las distintas operaciones del álgebra relacional puede leer el Silberschartz de la sección 14.3.2 hasta la 14.3.5.
+[^3]: Más detalles sobre el algoritmo empleado por este enfoque y sus detalle en las páginas 489 y 490 del Silberschatz.
