Unidad 9 done | DB

--- a/4º Año/Bases de Datos/Unidad 8/3. Organizacion por Asociacion.md
+++ b/4º Año/Bases de Datos/Unidad 8/3. Organizacion por Asociacion.md
@@ -81,10 +81,10 @@ Una vez ajustada la TDC, se recalcula la función de asociación para cada regis
 En ambas de las situaciones planteadas anteriormente sólo se necesita recalcular la función de asociación en los registros del cajón $j$. Para borrar un registro con valor de la clave de búsqueda $K_i$ se sigue el mismo procedimiento de búsqueda anterior, finalizando en algún cajón correspondiente. A continuación se borran los registros del archivo y la clave de búsqueda del cajón y el cajón en caso de que este esté vacío. Nótese que en este momento, varios cajones se pueden fusionar, reduciendo el tamaño de la TDC a la mitad. No obstante, a diferencia de la fusión de cajones, el cambio de tamaño de la TDC es una operación muy costosa si la tabla es grande. Por tanto, sólo sería aconsejable reducir el tamaño de la TDC si el número de cajones se reduce considerablemente.
 
 >[!tldr] Ventajas y Desventajas de la Asociación Extensible
->- Ventajas:
+>- **Ventajas**:
 >	- El rendimiento no se degrada según crece el archivo.
 >	- El espacio adicional requerido es mínimo, no es necesario reservar cajones para un futuro crecimiento; en vez de ello se pueden asignar los cajones de manera dinámica.
->- Desventajas:
+>- **Desventajas**:
 >	- La búsqueda implica un nivel adicional de indirección, ya que se debe acceder a la TDC antes que acceder al propio cajón. Esta referencia extra tiene una repercusión menor en el rendimiento.
 >
 >Aunque las estructuras asociativas que se discutieron con anterioridad no tienen este nivel extra de indirección, pierden su leve ventaja en el rendimiento cuando se llenan.
