--- a/4º Año/Bases de Datos/Unidad 10/1. Control de Concurrencia.md
+++ b/4º Año/Bases de Datos/Unidad 10/1. Control de Concurrencia.md
@@ -17,7 +17,7 @@ Dado un cronograma $S$ en la que hay dos operaciones consecutivas $I_i$ e $I_k$ 
 
 Se dice que $I_i$ e $I_k$ están en conflicto, si son operaciones de transacciones distintas sobre el mismo dato, y por lo menos una de estas instrucciones es una operación de escritura. Por otro lado si un cronograma $S$ puede transformarse en un cronograma $S'$ mediante una serie de intercambios de instrucciones no conflictivas, se dice que son ***equivalentes en conflictos***. Se dice que un cronograma $S$ es ***serializable en conflictos*** si es equivalente en conflictos a un cronograma en serie.
 
-### Equivalencia en Vistas
+## Equivalencia en Vistas
 
 Dado dos cronogramas $S$ y $S'$ en las que el mismo conjunto de transacciones participa en ambos cronogramas. Se dice que los cronogramas $S$ y $S'$ son equivalentes en vistas si se cumplen las siguientes condiciones:
 
@@ -36,7 +36,7 @@ En este caso ese cronograma concurrente es equivalente al siguiente cornograma e
 
 ## Prueba de Serializabilidad
 
-Consiste en construir un grafo de precedencia $G = (V, E)$, donde $V$ es un conjunto de vértices y $E$ es un conjunto de aristas. El conjunto de vértices consta de todas las transacciones que participan en el cronograma. El conjunto de aristas consta de todas las aristas $T_i$ → $T_k$ para las cuales se cumple una de las siguientes condiciones:
+Consiste en construir un grafo de precedencia $G = (V, E)$, donde $V$ es un conjunto de vértices y $E$ es un conjunto de aristas. El conjunto de vértices consta de todas las transacciones que participan en el cronograma. El conjunto de aristas consta de todas las aristas $T_i \Rightarrow T_k$ para las cuales se cumple una de las siguientes condiciones:
 
 - $T_i$ ejecuta $write(Q)$ antes que $T_k$ ejecute $read(Q)$.
 - $T_i$ ejecuta $read(Q)$ antes que $T_k$ ejecute $write(Q)$.
@@ -105,7 +105,7 @@ Al igual que los algoritmos de bloqueo en dos fases, las lecturas no comprometid
 
 #### Mecanismos de Validación
 
-Resulta conveniente utilizar un método de evaluación optimista En aquellos casos en que la mayoría de las transacciones son de sólo lectura, la tasa de conflictos entre las transacciones puede ser baja. Así, muchas de esas transacciones, si se ejecutasen sin la supervisión de un esquema de control de concurrencia, llevarían no obstante al sistema a un estado consistente. Aplicando métodos de alternativos de validación podemos disminuir la sobrecarga del sistema sin perder consistencia en la base de datos.
+Resulta conveniente utilizar un método de evaluación optimista en aquellos casos en que la mayoría de las transacciones son de sólo lectura, la tasa de conflictos entre las transacciones puede ser baja. Así, muchas de esas transacciones, si se ejecutasen sin la supervisión de un esquema de control de concurrencia, llevarían no obstante al sistema a un estado consistente. Aplicando métodos de alternativos de validación podemos disminuir la sobrecarga del sistema sin perder consistencia en la base de datos.
 La dificultad de reducir la sobrecarga está en que no se conocen de antemano las transacciones que estarán involucradas en un conflicto. Para obtener dicho conocimiento se necesita un esquema para supervisar el sistema.
 Por lo general cada transacción $T_i$ se ejecuta en dos o tres fases diferentes durante su tiempo de vida dependiendo de si es una transacción de sólo lectura o una de actualización. Las fases son las siguientes:
 
@@ -151,3 +151,59 @@ La justificación de la primera operación es clara. Una transacción lee la ver
 >	- La lectura de un dato tiene también que actualizar $r-ts(Q_k)$, que resulta en dos accesos potenciales a disco en vez de uno.
 >	- Los conflictos entre transacciones se resuelven a través de retrocesos en lugar de esperas, lo que puede llegar a generar un retroceso en cascada.
 
+## Inserciones y Supreciones
+
+Algunas transacciones, no sólo requieren accesos a datos que ya existen, sino también la posibilidad de crear nuevos datos o eliminar datos, en este caso deberemos contemplar estas dos nuevas operaciones:
+
+- $delete(Q)$: elimina al dato $Q$ de la base de datos.
+- $insert(Q)$: inserta un nuevo dato $Q$ a la base de datos y le da una valor inicial.
+
+Sean $I_i$ e $I_k$ instrucciones de las transacciones $T_i$ y $T_k$ respectivamente, que aparecen en un cronograma $S$ en orden consecutivo. Sea $I_i = delete(Q)$ una instrucción a ejecutar.
+
+- $I_k = read(Q)$: $I_i$ e $I_k$ tienen conflictos. Si $I_i$ viene antes de $I_k$, $T_k$ tendrá un error lógico, ya que ese registro ya habrá sido eliminado. Si $I_k$ viene antes de $I_i$, $T_k$ puede ejecutar la operación de lectura con éxito.
+- $I_k = write(Q)$: $I_i$ e $I_k$ tienen conflictos. Si $I_i$ viene antes de $I_k$, $T_k$ tendrá un error lógico, ya que ese registro ya habrá sido eliminado. Si $I_k$ viene antes de $I_i$, $T_k$ puede ejecutar la operación de escritura con éxito.
+- $I_k = delete(Q)$: $I_i$ e $I_k$ tienen conflictos. Si $I_i$ viene antes de $I_k$, $T_k$ tendrá un error lógico, ya que ese registro ya habrá sido eliminado. Si $I_k$ viene antes de $I_i$, $T_k$ puede ejecutar la operación de eliminación con éxito, pero ahora arrojará error $T_i$.
+- $I_k = insert(Q)$: $I_i$ e $I_k$ tienen conflictos. Si $Q$ no existe antes de las ejecuciones de $I_i$ e $I_k$, entonces si $I_i$ se ejecuta antes de $I_k$, $T_i$ producirá un error lógico porque intentará eliminar un registro que no existe. Sin embargo, si $I_k$ se ejecuta antes de $I_i$, esto no ocurrirá. Por otro lado, si $Q$ existía antes de las ejecuciones de $I_i$ e $I_k$, se producirá un error lógico si $I_k$ se ejecuta antes de $I_i$ porque $I_k$ intentará insertar un registro que ya existe, en caso contrario no ocurrirá ningún error.
+
+La forma de hacer frente a estos conflictos va a depender del protocolo utilizado por la base de datos para manejar la concurrencia, en caso de emplear un bloqueo de dos fases el registro debe tener un bloqueo exclusivo en ese dato antes de poder realizar la eliminación. En cambio, en caso de emplear ordenación por hora de entrada se debe realizar una prueba similar a la que se realiza con la operación de escritura:
+
+- Si $ts(T_i) < r-ts(Q)$, se rechaza la eliminación y $T_i$ retrocede. Esto es porque el valor de $Q$ que $T_i$ iba a suprimir, ya ha sido leído por una transacción $T_j$ con $ts(T_j) > ts(T_i)$.
+- Si $ts(T_i) < w-ts(Q)$, se rechaza la eliminación y $T_i$ retrocede. Esto es porque una transacción $T_j$ con $ts(T_j) > ts(T_i)$ ha escrito $Q$.
+- Si $T_i \geq w-ts(Q)$ y $T_i \geq r-ts(Q)$, la operación de eliminación se ejecutara sin problema alguno.
+
+Por su parte, la operación inserción tiene conflictos con las operaciones de lectura, escritura y eliminación, dado que no se puede realizar estas operaciones si el dato sobre el cual operar no existe. Dado que las inserciones le asigna un valor a $Q$, este se trata igual que la operación escritura para propósitos de control de concurrencia. Bajo el protocolo de bloqueo de dos fases, si $T_i$ realiza una operación de inserción, a $T_i$, se le da un bloqueo exclusivo en el dato $Q$ recién creado. Mientras que bajo el protocolo de ordenación por hora de entrada, si $T_i$ realiza la operación de inserción, los valores $r-ts(Q)$ y $w-ts(Q)$ se ponen en $ts(T_i)$.
+
+### Fenómeno Fantasma
+
+Sea $T_k$ una transacción que ejecuta la siguiente consulta:
+
+```sql
+SELECT SUM(saldo)
+	FROM cuenta
+	WHERE nombre_sucursal = 'Concordia';
+```
+
+Y $T_j$ otra transacción que ejecuta la siguiente inserción:
+
+```sql
+INSERT INTO cuenta VALUES (‘Concordia’, C-201, 900)
+```
+
+Sea $P$ un cronograma que involucra a $T_k$ y $T_j$. Se espera que haya un conflicto potencial debido a las razones siguientes:
+
+1. Si $T_k$ utiliza la tupla que ha insertado recientemente $T_j$ para calcular la suma de los saldos, entonces $T_k$ lee el valor que ha escrito $T_j$. Así, en un cronograma serializable equivalente a $P$, $T_j$ debe ir antes de $T_k$.
+2. Si $T_k$ no utiliza la tupla que ha insertado recientemente $T_j$ para calcular la suma de los saldos, entonces en un cronograma serializable equivalente a $P$, $T_k$ debe ir antes de $T_j$.
+
+En el segundo caso $T_k$ y $T_j$ no acceden a ninguna tupla común, y sin embargo ambas transacciones están en conflicto por una tupla fantasma. Si bien este conflicto no es detectado si se realiza el control de concurrencia con granularidad de tupla, esto es un problema el resto de métodos.
+Este problema recibe el nombre de ***fenómeno fantasma***. Para evitar este fenómeno se permite que $T_k$ impida a otras transacciones crear nuevas tuplas en la relación *cuenta* cuyo campo nombre_sucursal sea Concordia. Aun así, la solución más simple a este problema consiste en bloquear la relación *cuenta* en modo compartido.
+En este caso las transacciones como $T_k$ , que lean tuplas pertenecientes a la relación cuenta, tendrían que bloquear el elemento de datos correspondientes a la relación en modo compartido. Mientras que las transacciones como $T_j$, que actualicen tuplas pertenecientes a la relación cuenta, tendrían que bloquear el elemento de datos en modo exclusivo. De este modo $T_k$ y $T_j$ tendrían un conflicto en un elemento de datos real, en lugar de tenerlo en uno fantasma, con el inconveniente de que baja el grado de concurrencia, ya que se impide que dos transacciones que inserten distintas tuplas en la relación se ejecuten concurrentemente.
+Otra solución es utilizar el ***protocolo de bloqueo de índice***. Sea una transacción Ti, el protocolo opera de la siguiente manera:
+
+1. Toda relación debe tener al menos un índice.
+2. $T_i$ puede acceder a las tuplas de una relación únicamente después de haberlas encontrado primero a través de uno o más índices de la relación.
+3. Si $T_i$ realiza una búsqueda debe bloquear en modo compartido todos los nodos hoja índices a los que accede.
+4. $T_i$ no puede insertar, borrar o actualizar una tupla $t_i$ en una relación $r$ sin actualizar todos los índices de $r$. $T_i$ debe obtener bloqueos exclusivos sobre todos los nodos hoja índice que están afectados por la inserción, el borrado o la actualización.
+5. Hay que cumplir las reglas del protocolo de bloqueo en dos fases.
+
+>[!caution] Acaración sobre el Procedimiento
+>En este caso solo se esta describiendo el procedimientos del protocolo de bloqueo por índice para los indices de árbol B⁺.
