Segunda filmina de concurrencia done | DB

--- a/4º Año/Bases de Datos/Unidad 10/1. Control de Concurrencia.md
+++ b/4º Año/Bases de Datos/Unidad 10/1. Control de Concurrencia.md
@@ -194,7 +194,7 @@ Sea $P$ un cronograma que involucra a $T_k$ y $T_j$. Se espera que haya un confl
 1. Si $T_k$ utiliza la tupla que ha insertado recientemente $T_j$ para calcular la suma de los saldos, entonces $T_k$ lee el valor que ha escrito $T_j$. Así, en un cronograma serializable equivalente a $P$, $T_j$ debe ir antes de $T_k$.
 2. Si $T_k$ no utiliza la tupla que ha insertado recientemente $T_j$ para calcular la suma de los saldos, entonces en un cronograma serializable equivalente a $P$, $T_k$ debe ir antes de $T_j$.
 
-En el segundo caso $T_k$ y $T_j$ no acceden a ninguna tupla común, y sin embargo ambas transacciones están en conflicto por una tupla fantasma. Si bien este conflicto no es detectado si se realiza el control de concurrencia con granularidad de tupla, esto es un problema el resto de métodos.
+En el segundo caso $T_k$ y $T_j$ no acceden a ninguna tupla común, y sin embargo ambas transacciones están en conflicto por una tupla fantasma. Si bien este conflicto no es detectado si se realiza el control de concurrencia con granularidad de tupla, esto es un problema para el resto de métodos.
 Este problema recibe el nombre de ***fenómeno fantasma***. Para evitar este fenómeno se permite que $T_k$ impida a otras transacciones crear nuevas tuplas en la relación *cuenta* cuyo campo nombre_sucursal sea Concordia. Aun así, la solución más simple a este problema consiste en bloquear la relación *cuenta* en modo compartido.
 En este caso las transacciones como $T_k$ , que lean tuplas pertenecientes a la relación cuenta, tendrían que bloquear el elemento de datos correspondientes a la relación en modo compartido. Mientras que las transacciones como $T_j$, que actualicen tuplas pertenecientes a la relación cuenta, tendrían que bloquear el elemento de datos en modo exclusivo. De este modo $T_k$ y $T_j$ tendrían un conflicto en un elemento de datos real, en lugar de tenerlo en uno fantasma, con el inconveniente de que baja el grado de concurrencia, ya que se impide que dos transacciones que inserten distintas tuplas en la relación se ejecuten concurrentemente.
 Otra solución es utilizar el ***protocolo de bloqueo de índice***. Sea una transacción Ti, el protocolo opera de la siguiente manera:
@@ -207,3 +207,4 @@ Otra solución es utilizar el ***protocolo de bloqueo de índice***. Sea una tra
 
 >[!caution] Acaración sobre el Procedimiento
 >En este caso solo se esta describiendo el procedimientos del protocolo de bloqueo por índice para los indices de árbol B⁺.
+
