--- a/4º Año/Bases de Datos/Unidad 10/2. Granularidad y Aislamiento.md
+++ b/4º Año/Bases de Datos/Unidad 10/2. Granularidad y Aislamiento.md
@@ -37,3 +37,21 @@ Obsérvese que en el protocolo de granularidad múltiple es necesario que se adq
 
 ## Niveles de Aislamiento
 
+La definición de transacción SQL es parecida a nuestro concepto de transacción ya definido. Es decir, es una unidad lógica de trabajo cuya atomicidad está garantizada. Una simple sentencia SQL se considera que siempre es atómica. En SQL no hay ninguna sentencia de inicio de transacción explícita, sin embargo, cada transacción debe tener una sentencia explícita de terminación, que puede ser `COMMIT` o `ROLLBACK`.
+Una transacción tiene ciertas características atribuibles a ella, que se especifican en SQL mediante la sentencia `SET TRANSACTION`,  estas características son las siguientes:
+
+- **Modo de acceso**: Permite indicar los permisos que tendrá esa transacción a la hora de su ejecución. Contamos con solo dos modos de acceso, el ***modo de solo lectura*** y el ***modo de lectura-escritura***. El primer modo solo le permite a las transacciones acceder a los datos, mientras que la segundo permite realizar todas las operaciones CRUD.
+- **Tamaño del área de deagnóstico**: Especifica un valor entero $n$ que indica el número de condiciones que se pueden mantener simultáneamente en el área de diagnóstico. Estas condiciones proporcionan retroalimentación sobre errores o excepciones ocurridas en la sentencia SQL recién ejecutada.
+- **Nivel de aislamiento**: Controlan cómo y cuándo los cambios realizados por una transacción son visibles a otras transacciones. Existen cuatro niveles de aislamiento principales:
+	1. **Read Uncommitted**: Las transacciones pueden leer datos no confirmados por otras transacciones, lo que puede llevar a lecturas sucias.
+	2. **Read Committed**: Las transacciones solo pueden leer datos confirmados. Evita lecturas sucias pero permite lecturas irrepetibles.
+	3. **Repeatable Read**: Las transacciones garantizan que si se leen datos una vez, esos datos no cambiarán si se leen nuevamente en la misma transacción. Evita lecturas irrepetibles pero puede permitir lecturas fantasma.
+	4. **Serializable**: El nivel más estricto. Las transacciones se ejecutan de forma que parece que se ejecutaron secuencialmente, una después de otra. Evita lecturas sucias, lecturas no repetibles y lecturas fantasma.
+
+La siguiente imagen mientra en un cuadro los tipos de violaciones que pueden suceder en cada nivel de aislamiento.
+
+![[tipo-violaciones.png]]
+
+>[!example] Lecturas Irrepetiples
+>Supongamos que existen dos transacciones, $T_1$ y $T_2$, y que $T_1$ lee uno o más registros de una tabla, si $T_2$ actualiza alguno de esos registros que $T_1$ había leído previamente y luego $T_1$ vuelve a leer los mismos registros, encontrará valores diferentes. Este fenómeno se conoce como ***lectura no repetible***.
+
